Demo using Dexie to interact with IndexedDB

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -57,6 +57,7 @@
       name="google-site-verification"
       content="a6Dkj3tZ7SEai-QbfbOI0M0Jb65Lp18nbY1Hl3LwOro"
     />
+    <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
   </head>
 
   <body>
