--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -58,6 +58,7 @@
       content="a6Dkj3tZ7SEai-QbfbOI0M0Jb65Lp18nbY1Hl3LwOro"
     />
     <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
+    <script src="/resources/javascript/indexedDB.js"></script>
   </head>
 
   <body>
