--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -86,6 +86,6 @@
       </ul>
     </footer>
 
-    <script src="/resources/javascript/all.min.js"></script>
+    <script src="/resources/javascript/all.js"></script>
   </body>
 </html>
